# soc-openenv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
client/: soc_env.py
env/: environment.py  main.py  models.py
env/graders/: task1_grader.py  task2_grader.py  task3_grader.py
env/scenarios/: task1_easy.json  task2_medium.json  task3_hard.json
server/: __init__.py  app.py
