[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-openenv"
version = "1.0.0"
description = "SOC Incident Response OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Bhargav Kalambhe" },
]
keywords = ["openenv", "security", "incident-response", "rl"]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.1",
    "aiohttp>=3.9.5",
    "openai>=2.7.2",
]

[project.scripts]
soc-openenv-server = "server.app:serve"
serve = "server.app:serve"

[project.urls]
Homepage = "https://huggingface.co/spaces/atofinite/soc-openenv"
Repository = "https://github.com/Atofinite5/soc-openenv"

[tool.setuptools]
packages = ["env", "env.graders", "client", "server"]
include-package-data = true

[tool.setuptools.package-data]
"env" = ["scenarios/*.json"]
